Rename scripts and update Copyright-year
I am planning to install the scripts rather than shipping them with
software or having them as sub-modules of a git-repository.

For that to happen, I consider `dispatch-test' and `run-tests' to be
better suited names for system-wide installation.

Signed-off-by: Frank Terbeck <ft@bewatermyfriend.org>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,6 @@
-MAN = dispatch.1 runtests.1
-PDF = dispatch.pdf runtests.pdf
-HTML = dispatch.html runtests.html
+MAN = dispatch-test.1 run-tests.1
+PDF = dispatch-test.pdf run-tests.pdf
+HTML = dispatch-test.html run-tests.html
 
 COMMONOPTIONS = --self-contained --number-sections --normalize --smart --toc
 
@@ -8,33 +8,33 @@ TEX_META = -V date='\today' --highlight-style=monochrome
 HTML_META = -c manual.css
 
 DISPATCH_TEX_META = -V author="Frank Terbeck"
-DISPATCH_TEX_META += -V title="dispatch(1) Manual"
+DISPATCH_TEX_META += -V title="dispatch-test(1) Manual"
 DISPATCH_HTML_META = $(DISPATCH_TEX_META) --highlight-style=monochrome
-DISPATCH_MAN_META = -V title="dispatch" -V section="1" -V date="Nov, 2012"
+DISPATCH_MAN_META = -V title="dispatch-test" -V section="1" -V date="Nov, 2012"
 
 RUNTESTS_TEX_META = -V author="Frank Terbeck"
-RUNTESTS_TEX_META += -V title="runtests(1) Manual"
+RUNTESTS_TEX_META += -V title="run-tests(1) Manual"
 RUNTESTS_HTML_META = $(RUNTESTS_TEX_META) --highlight-style=monochrome
-RUNTESTS_MAN_META = -V title="runtests" -V section="1" -V date="Nov, 2012"
+RUNTESTS_MAN_META = -V title="run-tests" -V section="1" -V date="Nov, 2012"
 
 all: man html pdf
 man: $(MAN)
 pdf: $(PDF)
 html: $(HTML)
 
-dispatch.1: dispatch.mdwn
-	pandoc -t man $(COMMONOPTIONS) $(DISPATCH_MAN_META) -o $@ dispatch.mdwn
-dispatch.pdf: dispatch.mdwn
-	pandoc --template template.latex $(COMMONOPTIONS) $(TEX_META) $(DISPATCH_TEX_META) -o $@ dispatch.mdwn
-dispatch.html: dispatch.mdwn
-	pandoc -t html5 $(HTML_META) $(COMMONOPTIONS) $(DISPATCH_HTML_META) -o $@ dispatch.mdwn
+dispatch-test.1: dispatch-test.mdwn
+	pandoc -t man $(COMMONOPTIONS) $(DISPATCH_MAN_META) -o $@ dispatch-test.mdwn
+dispatch-test.pdf: dispatch-test.mdwn
+	pandoc --template template.latex $(COMMONOPTIONS) $(TEX_META) $(DISPATCH_TEX_META) -o $@ dispatch-test.mdwn
+dispatch-test.html: dispatch-test.mdwn
+	pandoc -t html5 $(HTML_META) $(COMMONOPTIONS) $(DISPATCH_HTML_META) -o $@ dispatch-test.mdwn
 
-runtests.1: runtests.mdwn
-	pandoc -t man $(COMMONOPTIONS) $(RUNTESTS_MAN_META) -o $@ runtests.mdwn
-runtests.pdf: runtests.mdwn
-	pandoc --template template.latex $(COMMONOPTIONS) $(TEX_META) $(RUNTESTS_TEX_META) -o $@ runtests.mdwn
-runtests.html: runtests.mdwn
-	pandoc -t html5 $(HTML_META) $(COMMONOPTIONS) $(RUNTESTS_HTML_META) -o $@ runtests.mdwn
+run-tests.1: run-tests.mdwn
+	pandoc -t man $(COMMONOPTIONS) $(RUNTESTS_MAN_META) -o $@ run-tests.mdwn
+run-tests.pdf: run-tests.mdwn
+	pandoc --template template.latex $(COMMONOPTIONS) $(TEX_META) $(RUNTESTS_TEX_META) -o $@ run-tests.mdwn
+run-tests.html: run-tests.mdwn
+	pandoc -t html5 $(HTML_META) $(COMMONOPTIONS) $(RUNTESTS_HTML_META) -o $@ run-tests.mdwn
 
 clean:
 	rm -f $(HTML) $(PDF) $(MAN) *~
